# jpg-loaders-comparison

./: README.md  main.cpp  meson.build  tvgLoader.h
jpg-richgel/: jpgd.cpp  tvgJpgLoader.cpp  tvgJpgLoader.h
jpg-turbo/: meson.build  tvgJpgLoaderTurbo.cpp  tvgJpgLoaderTurbo.h
